--- a/test.html
+++ b/test.html
@@ -113,6 +113,10 @@
             $("#toApp").attr("src", "tkanmanapp://goto?page=web&url=https%3A%2F%2Fcanyinghao2.github.io%2Fmanhua%2Ftest.html");
         }
 
+        function webtoappmht() {
+            $("#toApp").attr("src", "tmanhuataiapp://goto?page=web&url=https%3A%2F%2Fcanyinghao2.github.io%2Fmanhua%2Ftest.html");
+        }
+
 
         function gotoComic() {
             $("#toApp").attr("src", "tkanmanapp://goto?page=dir&comic_id=25934");
@@ -179,7 +183,8 @@
 <body>
 
 
-<a class="btn" href="javascript:webtoapp()">app内打开此页面</a><br/><br/>
+<a class="btn" href="javascript:webtoapp()">看漫app内打开此页面</a><br/><br/>
+<a class="btn" href="javascript:webtoappmht()">漫画台app内打开此页面</a><br/><br/>
 
 <a class="btn" href="javascript:fullscreen()">全屏</a><br/>
 <a class="btn" href="javascript:normalscreen()">非全屏</a><br/>
