--- a/testjump.html
+++ b/testjump.html
@@ -185,7 +185,9 @@
             $("#toApp").attr("src", "tkanmanapp://goto?page=contactus");
         }
 
-
+        function redeemcode() {
+            $("#toApp").attr("src", "tkanmanapp://goto?page=redeemcode");
+        }
 
 
         function novel() {
@@ -327,7 +329,8 @@
 <a class="btn" href="javascript:task()"> 任务中心</a><br/>
 <a class="btn" href="javascript:notification()"> 通知公告</a><br/>
 <a class="btn" href="javascript:localread()"> 本地阅读</a><br/>
-<a class="btn" href="javascript:contactus()"> 联系我们</a><br/><br/><br/>
+<a class="btn" href="javascript:contactus()"> 联系我们</a><br/>
+<a class="btn" href="javascript:redeemcode()">兑换码</a><br/><br/><br/>
 <a class="btn" href="javascript:novel()"> 小说主页</a><br/>
 <a class="btn" href="javascript:novelGril()"> 小说女版</a><br/>
 <a class="btn" href="javascript:novelBoy()"> 小说男版</a><br/>
