--- a/testjump.html
+++ b/testjump.html
@@ -189,6 +189,10 @@
             $("#toApp").attr("src", "tkanmanapp://goto?page=redeemcode");
         }
 
+        function redeemcoderecord() {
+            $("#toApp").attr("src", "tkanmanapp://goto?page=redeemcoderecord");
+        }
+
 
         function novel() {
             $("#toApp").attr("src", "tkanmanapp://goto?page=novel");
@@ -330,7 +334,11 @@
 <a class="btn" href="javascript:notification()"> 通知公告</a><br/>
 <a class="btn" href="javascript:localread()"> 本地阅读</a><br/>
 <a class="btn" href="javascript:contactus()"> 联系我们</a><br/>
-<a class="btn" href="javascript:redeemcode()">兑换码</a><br/><br/><br/>
+<a class="btn" href="javascript:redeemcode()">兑换码</a><br/>
+<a class="btn" href="javascript:redeemcoderecord()">兑换码记录</a><br/>
+
+
+<br/><br/>
 <a class="btn" href="javascript:novel()"> 小说主页</a><br/>
 <a class="btn" href="javascript:novelGril()"> 小说女版</a><br/>
 <a class="btn" href="javascript:novelBoy()"> 小说男版</a><br/>
