--- a/testjump.html
+++ b/testjump.html
@@ -192,6 +192,9 @@
         function redeemcoderecord() {
             $("#toApp").attr("src", "tkanmanapp://goto?page=redeemcoderecord");
         }
+        function broadcast() {
+            $("#toApp").attr("src", "tkanmanapp://goto?page=broadcast");
+        }
 
 
         function novel() {
@@ -336,6 +339,7 @@
 <a class="btn" href="javascript:contactus()"> 联系我们</a><br/>
 <a class="btn" href="javascript:redeemcode()">兑换码</a><br/>
 <a class="btn" href="javascript:redeemcoderecord()">兑换码记录</a><br/>
+<a class="btn" href="javascript:broadcast()">喇叭消息页</a><br/>
 
 
 <br/><br/>
