--- a/testjump.html
+++ b/testjump.html
@@ -312,7 +312,7 @@
 <a class="btn" href="javascript:community()"> 圈子</a><br/>
 <a class="btn" href="javascript:shelves()"> 书架</a><br/>
 <a class="btn" href="javascript:mine()"> 我的</a><br/>
-<a class="btn" href="javascript:backpack()"> 我的</a><br/>
+<a class="btn" href="javascript:backpack()"> 背包</a><br/>
 <a class="btn" href="javascript:communitycircle()"> 圈子详情页</a><br/>
 <a class="btn" href="javascript:communityarticle()"> 帖子详情页</a><br/>
 <a class="btn" href="javascript:communitytopic()"> 话题详情页</a><br/>
