--- a/testjump.html
+++ b/testjump.html
@@ -200,6 +200,10 @@
             $("#toApp").attr("src", "tkanmanapp://goto?page=recharge&tabindex=4");
         }
 
+        function shieldcomic() {
+            $("#toApp").attr("src", "tkanmanapp://goto?page=shieldcomic");
+        }
+
 
         function novel() {
             $("#toApp").attr("src", "tkanmanapp://goto?page=novel");
@@ -341,6 +345,7 @@
 <a class="btn" href="javascript:redeemcoderecord()">兑换码记录</a><br/>
 <a class="btn" href="javascript:broadcast()">喇叭消息页</a><br/>
 <a class="btn" href="javascript:recharge4()">商店礼包页面</a><br/>
+<a class="btn" href="javascript:shieldcomic()">需付费作品列表</a><br/>
 
 
 <br/><br/>
