--- a/test.html
+++ b/test.html
@@ -102,7 +102,7 @@
         }
 
         function newyearshare() {
-            $("#toApp").attr("src", "tkanmanapp://picture?qr=https%3A%2F%2Fgetcomicinfo-globalapi.yyhao.com%2Fapp_api%2Fv5%2Fgetcomicinfo_body%2F%3Fcomic_id%3D102876%26platformname%3Dandroid%26productname%3Daym&image=https%3A%2F%2Fcanyinghao2.github.io%2Fmanhua%2Fnewyear.png&callback=picturecallback");
+            $("#toApp").attr("src", "tkanmanapp://newyear?qr=https%3A%2F%2Fgetcomicinfo-globalapi.yyhao.com%2Fapp_api%2Fv5%2Fgetcomicinfo_body%2F%3Fcomic_id%3D102876%26platformname%3Dandroid%26productname%3Daym&image=https%3A%2F%2Fcanyinghao2.github.io%2Fmanhua%2Fnewyear.png&callback=picturecallback");
         }
 
         function sharecallback(shareType) {
