--- a/testjump.html
+++ b/testjump.html
@@ -205,6 +205,11 @@
         }
 
 
+        function showtask() {
+            $("#toApp").attr("src", "tkanmanapp://goto?page=showtask&task_id=33");
+        }
+
+
         function novel() {
             $("#toApp").attr("src", "tkanmanapp://goto?page=novel");
         }
@@ -346,6 +351,7 @@
 <a class="btn" href="javascript:broadcast()">喇叭消息页</a><br/>
 <a class="btn" href="javascript:recharge4()">商店礼包页面</a><br/>
 <a class="btn" href="javascript:shieldcomic()">需付费作品列表</a><br/>
+<a class="btn" href="javascript:showtask()">显示新春任务弹窗</a><br/>
 
 
 <br/><br/>
