--- a/test.html
+++ b/test.html
@@ -201,7 +201,9 @@
 <a class="btn" href="javascript:share()"> 分享</a><br/>
 <a class="btn" href="javascript:pictureshare()"> 分享二维码</a><br/>
 <a class="btn" href="javascript:newyearshare()"> 新年签二维码</a><br/>
-<a class="btn" href="javascript:gotoComic()"> 打开漫画</a><br/>
+<a class="btn" href="javascript:gotoComic()"> 打开漫画</a><br/><br/>
+
+<a class="btn" href="http://static.321mh.com/html/video/index.html"> 播放动态漫画视频</a><br/><br/>
 
 
 
