--- a/test.html
+++ b/test.html
@@ -203,7 +203,7 @@
 <a class="btn" href="javascript:newyearshare()"> 新年签二维码</a><br/>
 <a class="btn" href="javascript:gotoComic()"> 打开漫画</a><br/><br/>
 
-<a class="btn" href="http://static.321mh.com/html/video/index.html"> 播放动态漫画视频</a><br/><br/>
+<a class="btn" href="http://static.321mh.com/html/video/index.html?title=%E6%80%A8%E7%81%B5%E8%AE%B0%E4%BA%8B%E7%B0%BF&file=yljs_01.mp4&cover=yljs_01.jpg"> 播放动态漫画视频</a><br/><br/>
 
 
 
