--- a/testjump.html
+++ b/testjump.html
@@ -75,6 +75,10 @@
             $("#toApp").attr("src", "tkanmanapp://goto?page=sortlist&class_id=137");
         }
 
+        function sortSearch() {
+            $("#toApp").attr("src", "tkanmanapp://goto?page=sortlist&sort=&key=err");
+        }
+
         function comicbook() {
             $("#toApp").attr("src", "tkanmanapp://goto?page=comicbook&book_id=27200250&book_type=6");
         }
@@ -314,6 +318,7 @@
 <a class="btn" href="javascript:ranking()"> 排行榜</a><br/>
 <a class="btn" href="javascript:classification()"> 分类</a><br/>
 <a class="btn" href="javascript:sortlist()"> 频道页</a><br/>
+<a class="btn" href="javascript:sortSearch()"> 搜索结果</a><br/>
 <a class="btn" href="javascript:comicbook()"> 书单详情</a><br/>
 <a class="btn" href="javascript:buyhistory()"> 漫画已购详情</a><br/>
 <a class="btn" href="javascript:search()"> 搜索</a><br/>
