--- a/testjump.html
+++ b/testjump.html
@@ -76,7 +76,7 @@
         }
 
         function sortSearch() {
-            $("#toApp").attr("src", "tkanmanapp://goto?page=sortlist&sort=&key=err");
+            $("#toApp").attr("src", "tkanmanapp://goto?page=sortlist&key=err");
         }
 
         function comicbook() {
