--- a/testjump.html
+++ b/testjump.html
@@ -76,7 +76,7 @@
         }
 
         function sortSearch() {
-            $("#toApp").attr("src", "tkanmanapp://goto?page=sortlist&key=飒飒动漫");
+            $("#toApp").attr("src", "tkanmanapp://goto?page=sortlist&key=%E9%A3%92%E9%A3%92%E5%8A%A8%E6%BC%AB");
         }
 
         function comicbook() {
