--- a/testjump.html
+++ b/testjump.html
@@ -78,6 +78,9 @@
         function sortSearch() {
             $("#toApp").attr("src", "tkanmanapp://goto?page=sortlist&key=%E9%A3%92%E9%A3%92%E5%8A%A8%E6%BC%AB");
         }
+        function sortSearch1() {
+            $("#toApp").attr("src", "tkanmanapp://goto?page=sortlist&key=飒飒动漫");
+        }
 
         function comicbook() {
             $("#toApp").attr("src", "tkanmanapp://goto?page=comicbook&book_id=27200250&book_type=6");
@@ -319,6 +322,7 @@
 <a class="btn" href="javascript:classification()"> 分类</a><br/>
 <a class="btn" href="javascript:sortlist()"> 频道页</a><br/>
 <a class="btn" href="javascript:sortSearch()"> 搜索结果</a><br/>
+<a class="btn" href="javascript:sortSearch1()"> 搜索结果1</a><br/>
 <a class="btn" href="javascript:comicbook()"> 书单详情</a><br/>
 <a class="btn" href="javascript:buyhistory()"> 漫画已购详情</a><br/>
 <a class="btn" href="javascript:search()"> 搜索</a><br/>
