--- a/testjump.html
+++ b/testjump.html
@@ -263,6 +263,9 @@
         function giftpackagepay() {
             $("#toApp").attr("src", "tkanmanapp://goto?page=giftpackage&gift_id=13&action=pay");
         }
+        function authorcomics() {
+            $("#toApp").attr("src", "tkanmanapp://goto?page=authorcomics&user_id=64098632");
+        }
 
         function novel() {
             $("#toApp").attr("src", "tkanmanapp://goto?page=novel");
@@ -419,6 +422,7 @@
 <a class="btn" href="javascript:ciyuanexchange()">次元兑换</a><br/>
 <a class="btn" href="javascript:giftpackage()">跳转到礼包</a><br/>
 <a class="btn" href="javascript:giftpackagepay()">跳转到礼包并弹出支付弹框</a><br/>
+<a class="btn" href="javascript:authorcomics()">相关作品</a><br/>
 
 <br/><br/>
 <a class="btn" href="javascript:novel()"> 小说主页</a><br/>
