--- a/testjump.html
+++ b/testjump.html
@@ -489,13 +489,13 @@
     };
 
 
-    Ajax.get("https://comicsdk.321mh.com/api/comic_v1/getchapterreader/?chapter_id=114040&comic_id=1780&key=8BF9EECCDA537BBFA0D8E8DA82A0344A",function (result) {
-
-        console.log(result);
-
-        document.write(result);
-
-    })
+//    Ajax.get("https://comicsdk.321mh.com/api/comic_v1/getchapterreader/?chapter_id=114040&comic_id=1780&key=8BF9EECCDA537BBFA0D8E8DA82A0344A",function (result) {
+//
+//        console.log(result);
+//
+//        document.write(result);
+//
+//    })
 
 </script>
 </html>
