--- a/test.html
+++ b/test.html
@@ -219,6 +219,9 @@
 <a class="btn" href="javascript:novelclassify()"> 小说分类</a><br/>
 <a class="btn" href="javascript:novelrank()"> 小说排行榜</a><br/>
 
+<a class="btn" href="https://jq.qq.com/?_wv=1027&k=53BticN">测试加群</a><br/>
+<a class="btn" href="http://qm.qq.com/cgi-bin/qm/qr?k=E40LS8J3nCxkx6UOoP3KahroNr9MsYEE">测试加群</a><br/>
+
 
 </body>
 </html>
