--- a/testjump.html
+++ b/testjump.html
@@ -124,7 +124,7 @@
 
 
         function communitytopic() {
-            $("#toApp").attr("src", "tkanmanapp://goto?page=communitytopic&topic_id=1");
+            $("#toApp").attr("src", "tkanmanapp://goto?page=communitytopic&topic_id=1&tab_index=1");
         }
         function signin() {
             $("#toApp").attr("src", "tkanmanapp://goto?page=signin");
