--- a/testjump.html
+++ b/testjump.html
@@ -257,12 +257,9 @@
 
 
         function giftpackage() {
-            $("#toApp").attr("src", "tkanmanapp://goto?page=giftpackage&gift_id=13");
+            $("#toApp").attr("src", "tkanmanapp://goto?page=newgiftpackage&gift_type=1&gift_sub_type=1");
         }
 
-        function giftpackagepay() {
-            $("#toApp").attr("src", "tkanmanapp://goto?page=giftpackage&gift_id=13&action=pay");
-        }
         function authorcomics() {
             $("#toApp").attr("src", "tkanmanapp://goto?page=authorcomics&user_id=64098632");
         }
@@ -421,7 +418,7 @@
 <a class="btn" href="javascript:vipcard()">跳转到贵宾卡</a><br/>
 <a class="btn" href="javascript:ciyuanexchange()">次元兑换</a><br/>
 <a class="btn" href="javascript:giftpackage()">跳转到礼包</a><br/>
-<a class="btn" href="javascript:giftpackagepay()">跳转到礼包并弹出支付弹框</a><br/>
+
 <a class="btn" href="javascript:authorcomics()">相关作品</a><br/>
 
 <br/><br/>
