--- a/testjump.html
+++ b/testjump.html
@@ -257,7 +257,7 @@
 
 
         function giftpackage() {
-            $("#toApp").attr("src", "tkanmanapp://goto?page=newgiftpackage&gift_pack_type=1&gift_pack_type=16");
+            $("#toApp").attr("src", "tkanmanapp://goto?page=newgiftpackage&gift_pack_type=1&gift_pack_id=16");
         }
 
         function authorcomics() {
