--- a/testjump.html
+++ b/testjump.html
@@ -236,11 +236,11 @@
         }
 
         function freecard() {
-            $("#toApp").attr("src", "tkanmanapp://goto?page=freecard&card_type=3&type=1");
+            $("#toApp").attr("src", "tkanmanapp://goto?page=freecard&card_type=3&type=5");
         }
 
         function freecard2() {
-            $("#toApp").attr("src", "tkanmanapp://goto?page=freecard&card_type=5&type=6");
+            $("#toApp").attr("src", "tkanmanapp://goto?page=freecard&card_type=5&type=9");
         }
 
         function clearcard() {
@@ -413,7 +413,7 @@
 <a class="btn" href="javascript:msg_comment()">跳转到im评论消息列表</a><br/>
 <a class="btn" href="javascript:msg_focus()">跳转到im关注消息列表</a><br/>
 <a class="btn" href="javascript:freecard()">跳转到免费卡</a><br/>
-<a class="btn" href="javascript:freecard2()">跳转到免费卡</a><br/>
+<a class="btn" href="javascript:freecard2()">跳转到倍卡</a><br/>
 <a class="btn" href="javascript:clearcard()">跳转到净化卡</a><br/>
 <a class="btn" href="javascript:vipcard()">跳转到贵宾卡</a><br/>
 <a class="btn" href="javascript:ciyuanexchange()">次元兑换</a><br/>
