--- a/testjump.html
+++ b/testjump.html
@@ -430,7 +430,7 @@
 
 <a class="btn" href="javascript:authorcomics()">相关作品</a><br/>
 
-<a class="btn" href="javascript:authorcomics()">打卡</a><br/>
+<a class="btn" href="javascript:doclock()">打卡</a><br/>
 
 <br/><br/>
 <a class="btn" href="javascript:novel()"> 小说主页</a><br/>
