--- a/testjump.html
+++ b/testjump.html
@@ -354,8 +354,10 @@
         }
 
 
-        function doclockcallback(code) {
-            alert("打卡状态:"+code);
+        function doclockcallback(comicId,code) {
+            alert("打卡漫画:" +
+                    comicId +
+                    ",状态:"+code);
         }
 
     </script>
