--- a/index_ISM.html
+++ b/index_ISM.html
@@ -5,10 +5,10 @@
     <meta http-equiv="Content-Type" content="text/html; charset=UTF-8">
 
 
-    <title>爱飒漫画</title>
+    <title>小明看漫画</title>
     <meta name="keywords" content="斗破苍穹漫画,妃夕妍雪,穿越西元3000后,偷星九月天2时星流雨,时星流雨漫画免费阅读,爱优漫,薇薇123"/>
     <meta name="description"
-          content="爱飒漫画 带来最新的穿越西元3000后、斗破苍穹漫画、偷星九月天2时星流雨和时星流雨漫画免费阅读，飒漫画，飒漫乐画，神漫，漫画世界，漫画show，漫画party等好看的国漫杂志连载，还有当下热门的妃夕妍雪漫画和穿越西元3000后漫画免费阅读"/>
+          content="小明看漫画 带来最新的穿越西元3000后、斗破苍穹漫画、偷星九月天2时星流雨和时星流雨漫画免费阅读，飒漫画，飒漫乐画，神漫，漫画世界，漫画show，漫画party等好看的国漫杂志连载，还有当下热门的妃夕妍雪漫画和穿越西元3000后漫画免费阅读"/>
 
 
     <link rel="stylesheet" type="text/css" href="./file/gui.css">
@@ -24,10 +24,10 @@
         <div id="boardWeb" class="board-web">
             <img src="./file/phone.png" class="iphone-img">
             <div class="board-side">
-                <img src="./file/ic_logo.png" class="side-img">
+                <img src="./file/ic_logo_1.png" class="side-img">
                 <div class="side-jingxuan">
                     <p class="jingxuan-taitle">
-                        爱飒漫画
+                        小明看漫画
                     </p>
                     <p class="jingxuan-verson">
                         1.0
