--- a/test.html
+++ b/test.html
@@ -169,7 +169,17 @@
         function novelclassify() {
             $("#toApp").attr("src", "tkanmanapp://goto?page=novelclassify");
         }
+        function isInstall() {
+            $("#toApp").attr("src", "tkanmanapp://isInstallApp?package=com.comic.manhuatai&callback=isInstallCallBack");
+        }
 
+        function openApp() {
+            $("#toApp").attr("src", "tkanmanapp://openApp?package=com.comic.manhuatai");
+        }
+
+        function isInstallCallBack(pkg,isInstall) {
+            alert("是否安装:" + pkg+"   "+(isInstall==1?"是":"否"));
+        }
 
         function getShareConf() {
             return {
@@ -218,6 +228,9 @@
 <a class="btn" href="javascript:novelBook()"> 小说书单页</a><br/>
 <a class="btn" href="javascript:novelclassify()"> 小说分类</a><br/>
 <a class="btn" href="javascript:novelrank()"> 小说排行榜</a><br/>
+
+<a class="btn" href="javascript:isInstall()"> 是否安装漫画台</a><br/>
+<a class="btn" href="javascript:openApp()"> 打开漫画台</a><br/>
 
 <a class="btn" href="https://jq.qq.com/?_wv=1027&k=53BticN">测试加群</a><br/>
 <a class="btn" href="http://qm.qq.com/cgi-bin/qm/qr?k=E40LS8J3nCxkx6UOoP3KahroNr9MsYEE">测试加群</a><br/>
