--- a/index_ISM.html
+++ b/index_ISM.html
@@ -20,7 +20,7 @@
 <body>
 <div class="container index-page" style="background-color: #2aa4ce">
 
-    <div class="wrap mobile-page">
+    <div class="wrap mobile-page" style="background: url('//cms.samanlehua.com/cms/dengting/f73d6510-7dfb-11e9-a228-1fde45d41b64.png-noresize.webp') center center / cover no-repeat; opacity: 1;">
         <div id="boardWeb" class="board-web">
             <img src="./file/phone.png" class="iphone-img">
             <div class="board-side">
