--- a/test.html
+++ b/test.html
@@ -8,7 +8,8 @@
     <script src="js/jquery.tmpl.min.js" type="text/javascript"></script>
     <script src="./clipboard.min.js"></script>
     <script type="text/javascript">
-
+//        showData();
+        showTest();
         $(function () {
             var iframe = document.createElement('iframe');
             iframe.setAttribute('id', 'toApp');
@@ -189,6 +190,113 @@
                 url: 'http://www.baidu.com',
                 callback: "sharecallback"
             }
+        }
+
+
+        function showTest() {
+
+            var data = { '热血': 14.567049752581676,
+                '神魔': 10.665062317160656,
+                '玄幻': 13.202595639420462,
+                '漫改': 10.516764154067609,
+                '修真': 9.56606105590134,
+                '精品': 11.397808410639652,
+                '冒险': 5.549361156460864,
+                '穿越': 3.022322374129381,
+                '恋爱': 7.088013268824628,
+                '战争': 0.8343077492124656,
+                '游戏': 0.8534362948479048,
+                '搞笑': 2.3922022827086837,
+                '动作': 0.9469372785073371,
+                '都市': 2.1875639934372844,
+                '霸总': 1.468004360320394,
+                '生活': 1.3011325498033244,
+                '古风': 1.975000373397096,
+                '历史': 0.32064386187867194,
+                '日更': 0.3394214755245086,
+                '武侠': 0.4342446015657062,
+                '运动': 0.1904877566850363,
+                '新作': 0.17304662560239387,
+                '社会': 0.21921321050895354,
+                '推理': 0.16175056324844844,
+                '悬疑': 0.46400951446525646,
+                '恐怖': 0.037989291974012455,
+                '竞技': 0.026153170954006294,
+                '科幻': 0.06849943940784271,
+                '宠物': 0.01772502175498042,
+                '杂志': 0.005806406498399261,
+                '机战': 0.003736576086532919,
+                '真人': 0.0034994055839174094,
+                '萝莉': 0.00015006684057410638 };
+
+            var result = {};
+            var rs = [];
+            var i = 0;
+            for(var key in data){
+//               var str =  data[key]+"";
+//               str =  str.substr(0,5)+"%";
+//                result[key] = str;
+                if(key !== "精品"){
+                    rs[i] = { key:key,value:data[key]}
+                    i++;
+                }
+
+
+            }
+
+            rs =  rs.sort(function(a,b){
+                return b.value - a.value ;
+            });
+            rs = rs.slice(0,5);
+            rs.forEach(function (a) {
+                var key = a.key;
+                var str =  a.value+"";
+                str =  str.substr(0,5)+"%";
+                result[key] = str;
+
+            });
+
+
+
+//            console.log(result)
+           var str =  JSON.stringify(result);
+            str =  str.replace(/:/g,"：");
+            str = str.replace(/"/g,"");
+            document.write(str);
+//            document.write(JSON.stringify(rs))
+
+
+
+        }
+
+       function  showData(){
+            var json = [
+                {
+                    ciyuan:2355658.4000,
+                     zuanshi: 57423048,
+                },
+                {
+                    ciyuan:1234775.5000,
+                    zuanshi: 42022477,
+                },
+                {
+                    ciyuan:390162.2000,
+                    zuanshi: 11565493,
+                },{
+                    ciyuan:131961.8000,
+                    zuanshi: 3845252,
+                },{
+                    ciyuan:0,
+                    zuanshi: 10093,
+                }
+
+
+            ];
+
+           json.forEach((item, index) => {
+             console.log(item.ciyuan+item.zuanshi/100);
+          });
+
         }
 
 
