--- a/testtaiji.html
+++ b/testtaiji.html
@@ -42,7 +42,7 @@
             console.log(str);
         }
 
-        $(".btn").attr("data-clipboard-text", shareStr);
+        $(".btn").attr("data-clipboard-text", shareStr+"&ttttttttt");
 
     });
 
