--- a/testtaiji.html
+++ b/testtaiji.html
@@ -56,13 +56,16 @@
         alert(last);
         shareStr = "tkanmanapp://data?type=" +data.type+"&openid="+data.openid;
     }
+    function webtoapp() {
+        $("#toApp").attr("src", "tkanmanapp://goto?page=web&url=https%3A%2F%2Fcanyinghao2.github.io%2Fmanhua%2Ftesttaiji.html");
+    }
 
 
 </script>
 </head>
 <body>
 
-
+<a class="btn" href="javascript:webtoapp()" >app内打开此页面</a><br/>
 <a class="btn" href="https://itunes.apple.com/cn/app/id1477035627">跳转到太极看漫画</a><br/><br/>
 
 
