--- a/test_tai.html
+++ b/test_tai.html
@@ -47,11 +47,16 @@
 
     }
 
+    function webtoapp() {
+        $("#toApp").attr("src", "tkanmanapp://goto?page=web&url=http%3A%2F%2Factivity.321mh.com%2F2019%2F1011_genxin%2F");
+    }
+
+
 </script>
 </head>
 <body>
 
-
+<a class="btn" href="javascript:webtoapp()" >app内打开此页面</a><br/>
 <a class="btn" href="https://itunes.apple.com/cn/app/id1477035627">跳转到太极看漫画</a><br/><br/>
 
 
