--- a/test_tai.html
+++ b/test_tai.html
@@ -43,7 +43,7 @@
 
     function showuser(data) {
 
-        $(".btn").attr("data-clipboard-text", "tkanmanapp://data?type=" +data.type+"&openid="+data.openid);
+        $(".btn").attr("data-clipboard-text", "tkanmanapp://data?type=" +data.type+"&openid="+data.openid+"&fsfsdfsdf");
 
     }
 
