--- a/test_tai.html
+++ b/test_tai.html
@@ -48,7 +48,7 @@
     }
 
     function webtoapp() {
-        $("#toApp").attr("src", "tkanmanapp://goto?page=web&url=https%3A%2F%2Fcanyinghao2.github.io%2Fmanhua%2Ftesttaiji.html");
+        $("#toApp").attr("src", "tkanmanapp://goto?page=web&url=http%3A%2F%2F172.16.28.178%3A3000");
     }
 
 
