--- a/testtaiji.html
+++ b/testtaiji.html
@@ -56,7 +56,7 @@
         var last = JSON.stringify(data);
         alert(last);
         shareStr = "tkanmanapp://data?type=" +data.type+"&openid="+data.openid;
-        document.getElementById(".btn").setAttribute("data-clipboard-text", shareStr+"&ttttttttt");
+        document.getElementById("btn").setAttribute("data-clipboard-text", shareStr+"&ttttttttt");
 //        $(".btn").attr("data-clipboard-text", shareStr+"&ttttttttt");
 
     }
