--- a/testtaiji.html
+++ b/testtaiji.html
@@ -66,7 +66,9 @@
     function webtoapp2() {
         $("#toApp").attr("src", "tkanmanapp://goto?page=web&url=https%3A%2F%2Fcanyinghao2.github.io%2Fmanhua%2Ftesttaiji.html");
     }
-
+    function webtoapp3() {
+        $("#toApp").attr("src", "tkanmanapp://goto?page=web&url=http%3A%2F%2F172.16.28.178%3A3000");
+    }
 
 </script>
 </head>
@@ -74,9 +76,9 @@
 
 <a  href="javascript:webtoapp()" >app内打开此页面 正式</a><br/>
 
-<a  href="javascript:webtoapp()" >app内打开此页面 测试</a><br/>
+<a  href="javascript:webtoapp2()" >app内打开此页面 测试</a><br/>
 
-<a  href="javascript:webtoapp()" >app内打开此页面 ip</a><br/>
+<a  href="javascript:webtoapp3()" >app内打开此页面 ip</a><br/>
 
 
 <a id="btn" href="https://itunes.apple.com/cn/app/id1477035627">跳转到太极看漫画</a><br/><br/>
