--- a/testtaiji.html
+++ b/testtaiji.html
@@ -19,7 +19,7 @@
         document.body.appendChild(iframe);
 
 
-        var clipboard = new Clipboard('.btn');
+        var clipboard = new Clipboard('#btn');
 
         clipboard.on('success', function (e) {
             console.info('Action:', e.action);
