--- a/test_tai.html
+++ b/test_tai.html
@@ -14,7 +14,7 @@
         iframe.setAttribute('style', 'display:none');
         document.body.appendChild(iframe);
 
-        var clipboard = new Clipboard('.btn');
+        var clipboard = new Clipboard('#btn');
 
         clipboard.on('success', function (e) {
             console.info('Action:', e.action);
@@ -49,7 +49,7 @@
 </head>
 <body>
 
-<a class="btn" href="https://itunes.apple.com/cn/app/id1477035627">跳转到太极看漫画</a><br/><br/>
+<a id="btn" href="https://itunes.apple.com/cn/app/id1477035627">跳转到太极看漫画</a><br/><br/>
 
 
 
