--- a/test_tai.html
+++ b/test_tai.html
@@ -37,7 +37,11 @@
 
 
     document.getElementById("btn").onclick = function () {
-        location.href = "https://itunes.apple.com/cn/app/id1477035627"
+        location.href = "https://itunes.apple.com/cn/app/id1477035627";
+        setTimeout(function () {
+            location.href = "itms-apps://itunes.apple.com/cn/app/id1477035627";
+        },500)
+
     };
 
     function getshowuser() {
