--- a/test_tai.html
+++ b/test_tai.html
@@ -37,11 +37,7 @@
 
 
     document.getElementById("btn").onclick = function () {
-//        location.href = "https://itunes.apple.com/cn/app/id1477035627";
-        location.href = "itms-apps://itunes.apple.com/cn/app/id1477035627";
-//        setTimeout(function () {
-//
-//        },500)
+        location.href = "https://itunes.apple.com/cn/app/id1477035627";
 
     };
 
