--- a/testtaiji.html
+++ b/testtaiji.html
@@ -83,11 +83,12 @@
 
 <a id="btn" href="https://itunes.apple.com/cn/app/id1477035627">跳转到太极看漫画</a><br/><br/>
 
-<a  href="https://apple-site.321mh.com/smallkmh_app?page=dir&comic_id=107248&chapter_id=1645970">https://apple-site.321mh.com/apple-app-site-association/smallkmh_app?page=dir&comic_id=107248&chapter_id=1645970</a><br/><br/>
+<a  href="https://apple-site.321mh.com/smallkmh_app?page=dir&comic_id=107248&chapter_id=1645970">https://apple-site.321mh.com/smallkmh_app?page=dir&comic_id=107248&chapter_id=1645970</a><br/><br/>
 
-<a  href="https://comicsdk.321mh.com/smallkmh_app?page=dir&comic_id=107248&chapter_id=1645970">https://comicsdk.321mh.com/apple-app-site-association/smallkmh_app?page=dir&comic_id=107248&chapter_id=1645970</a><br/><br/>
-<a  href="https://comicsdk.321mh.com/zymk_app?page=dir&comic_id=1">https://comicsdk.321mh.com/apple-app-site-association/zymk_app?page=dir&comic_id=1</a><br/><br/>
-<a  href="https://comicsdk.321mh.com/zymk_app?page=dir&comic_id=1">https://comicsdk.321mh.com/.well-known/apple-app-site-association/zymk_app?page=dir&comic_id=1</a><br/><br/>
+<a  href="https://comicsdk.321mh.com/smallkmh_app?page=dir&comic_id=107248&chapter_id=1645970">https://comicsdk.321mh.com/smallkmh_app?page=dir&comic_id=107248&chapter_id=1645970</a><br/><br/>
+<a  href="https://comicsdk.321mh.com/zymk_app?page=dir&comic_id=1">https://comicsdk.321mh.com/zymk_app?page=dir&comic_id=1</a><br/><br/>
+<a  href="https://comicsdk.321mh.com/zymk_app?page=dir&comic_id=1&chapter_id=259131">https://comicsdk.321mh.com/zymk_app?page=dir&comic_id=1&chapter_id=259131</a><br/><br/>
+
 
 
 </body>
