--- a/testtaiji.html
+++ b/testtaiji.html
@@ -70,6 +70,12 @@
         $("#toApp").attr("src", "tkanmanapp://goto?page=web&url=http%3A%2F%2F172.16.28.178%3A3000");
     }
 
+
+    function zymk_app() {
+        $("#toApp").attr("src", "https://comicsdk.321mh.com/zymk_app?page=dir&comic_id=1");
+    }
+
+
 </script>
 </head>
 <body>
@@ -86,7 +92,7 @@
 <a  href="https://apple-site.321mh.com/smallkmh_app?page=dir&comic_id=107248&chapter_id=1645970">https://apple-site.321mh.com/smallkmh_app?page=dir&comic_id=107248&chapter_id=1645970</a><br/><br/>
 
 <a  href="https://comicsdk.321mh.com/smallkmh_app?page=dir&comic_id=107248&chapter_id=1645970">https://comicsdk.321mh.com/smallkmh_app?page=dir&comic_id=107248&chapter_id=1645970</a><br/><br/>
-<a  href="https://comicsdk.321mh.com/zymk_app?page=dir&comic_id=1">https://comicsdk.321mh.com/zymk_app?page=dir&comic_id=1</a><br/><br/>
+<a  href="javascript:zymk_app()">https://comicsdk.321mh.com/zymk_app?page=dir&comic_id=1</a><br/><br/>
 <a  href="https://comicsdk.321mh.com/zymk_app?page=dir&comic_id=1&chapter_id=259131">https://comicsdk.321mh.com/zymk_app?page=dir&comic_id=1&chapter_id=259131</a><br/><br/>
 
 
