--- a/testtaiji.html
+++ b/testtaiji.html
@@ -94,6 +94,7 @@
 <a  href="https://comicsdk.321mh.com/smallkmh_app?page=dir&comic_id=107248&chapter_id=1645970">https://comicsdk.321mh.com/smallkmh_app?page=dir&comic_id=107248&chapter_id=1645970</a><br/><br/>
 <a  href="javascript:zymk_app()">https://comicsdk.321mh.com/zymk_app?page=dir&comic_id=1</a><br/><br/>
 <a  href="https://comicsdk.321mh.com/zymk_app?page=dir&comic_id=1&chapter_id=259131">https://comicsdk.321mh.com/zymk_app?page=dir&comic_id=1&chapter_id=259131</a><br/><br/>
+<a  href="https://comicsdk.321mh.com/zymk_app?page=web&url=https%3A%2F%2Fcanyinghao2.github.io%2Fmanhua%2Ftesttaiji.html">url</a><br/><br/>
 
 
 
