--- a/testtaiji.html
+++ b/testtaiji.html
@@ -95,6 +95,7 @@
 
 <a  href="https://comicsdk.321mh.com/zymk_app?page=dir&comic_id=1&chapter_id=259131">https://comicsdk.321mh.com/zymk_app?page=dir&comic_id=1&chapter_id=259131</a><br/><br/>
 <a  href="https://comicsdk.321mh.com/zymk_app?page=web&url=https%3A%2F%2Fcanyinghao2.github.io%2Fmanhua%2Ftesttaiji.html">https://comicsdk.321mh.com/zymk_app?page=web&url=https%3A%2F%2Fcanyinghao2.github.io%2Fmanhua%2Ftesttaiji.html</a><br/><br/>
+<a  href="http://apple-site.321mh.com/smallkmh_app/goto?page=web&url=https%3A%2F%2Fcanyinghao2.github.io%2Fmanhua%2Ftesttaiji.html">http://apple-site.321mh.com/smallkmh_app/goto?page=web&url=https%3A%2F%2Fcanyinghao2.github.io%2Fmanhua%2Ftesttaiji.html</a><br/><br/>
 
 
 
