--- a/test_tai.html
+++ b/test_tai.html
@@ -57,7 +57,7 @@
 <style type="text/css">
 
     #btn {
-        background-image: url(http://activity.321mh.com/2019/1011_genxin/static/img/gengxin1.png);
+        background-image: url(./file/gengxin.png);
         background-size: 100% 100%;
         width: 100%;
         height: 100vh;
