--- a/testjump.html
+++ b/testjump.html
@@ -469,6 +469,8 @@
 <a class="btn" href="javascript:dirRead0()">漫画最新一章的阅读页</a><br/>
 <a class="btn" href="javascript:dirReadStr()">通过newId打开阅读页</a><br/>
 
+<a class="btn" href="https://cattoon.page.link/open">firebase深度链接</a><br/>
+
 
 </body>
 
