--- a/testjump.html
+++ b/testjump.html
@@ -471,6 +471,8 @@
 
 <a class="btn" href="https://cattoon.page.link/open">firebase深度链接</a><br/>
 
+<a class="btn" href="cattoon://cattoon.page.link/open">firebase深度链接cattoon</a><br/>
+
 
 </body>
 
