--- a/testjump.html
+++ b/testjump.html
@@ -477,7 +477,7 @@
 
 <a class="btn" href="https://cattoon.page.link/open">firebase深度链接</a><br/>
 
-<a class="btn" href="javascript:cattoon()">firebase深度链接cattoon</a><br/>
+<a class="btn" href="javascript:cattoon()">深度链接cattoon</a><br/>
 
 
 </body>
