--- a/test.html
+++ b/test.html
@@ -262,7 +262,7 @@
            var str =  JSON.stringify(result);
             str =  str.replace(/:/g,"：");
             str = str.replace(/"/g,"");
-            document.write(str);
+//            document.write(str);
 //            document.write(JSON.stringify(rs))
 
 
