--- a/test_zy.html
+++ b/test_zy.html
@@ -139,6 +139,8 @@
 <a class="btn" href="javascript:communityarticle()"> 帖子详情页</a><br/>
 <a class="btn" href="javascript:dir()" > 打开阅读页</a><br/>
 <a class="btn" href="javascript:dirH5()" > 打开H5阅读页</a><br/>
+<a class="btn" href="https://apps.apple.com/cn/app/compass-%E6%88%98%E6%96%97%E5%A4%A9%E8%B5%8B%E8%A7%A3%E6%9E%90%E7%B3%BB%E7%BB%9F/id1477817929" >跳转appstore</a><br/>
+<a class="btn" href="https://apps.apple.com/cn/app/id1477817929" >跳转appstore</a><br/>
 
 
 
